@@ -1,5 +1,5 @@
 version 0
-region ram 0 1000000 0 !
+region ram 0 20000000 0 !
 section fixed_vectors 0 1 0 1 1 0 1 0 20 20 !
 section rom_vectors 0 1 0 1 1 1 1 1 20000 20000 text text !
 section text 0 4 0 1 0 1 0 1 fini fini !
