@@ -1,7 +1,7 @@
 version 0
 region vecs 0 1000 1 !
 region rom 40000 7c0000 1 !
-region ram a0000000 2000000 0 !
+region ram a0000000 20000000 0 !
 section fixed_vectors 0 1 0 1 1 0 1 0 20 20 !
 section rom_vectors 0 1 0 1 1 1 1 1 40000 40000 text text !
 section text 0 4 0 1 0 1 0 1 fini fini !
