@@ -6,7 +6,7 @@
 
 MEMORY
 {
-    ram : ORIGIN = 0, LENGTH = 0x2000000
+    ram : ORIGIN = 0, LENGTH = 0x20000000
     rom : ORIGIN = 0xf0000000, LENGTH = 0x40000
 }
 
