@@ -1,5 +1,5 @@
 version 0
-region ram 0 2000000 0 !
+region ram 0 20000000 0 !
 region rom f0000000 40000 1 !
 section fixed_vectors 0 1 0 1 1 0 1 0 20 20 !
 section data 0 1 1 1 1 1 0 0 8000 bss !
