@@ -8,7 +8,7 @@
 MEMORY
 {
     ramalias : ORIGIN = 0x0, LENGTH = 0x100000
-    ram : ORIGIN = 0xA0000000, LENGTH = 0x2000000
+    ram : ORIGIN = 0xA0000000, LENGTH = 0x20000000
     rom : ORIGIN = 0xF0000000, LENGTH = 0x40000
 }
 
