@@ -1,3 +1,8 @@
+2003-01-30  Mark Salter  <msalter@redhat.com>
+
+	* include/pkgconf/mlt_*: Adjust RAM size to match max supported.
+	Actual size of installed RAM determined at runtime.
+	
 2003-01-22  Mark Salter  <msalter@redhat.com>
 
 	* src/diag/diag.c: Don't define DEFINE_VARS.
